# ParallelREQ

./: CMakeLists.txt  README.md  benchmark.sh  benchmark.txt
src/: bin_generator.cpp  quick_select.cpp  req_parallel.cpp  req_parallel_v2.cpp  req_parallel_v3.cpp  req_parallel_v4.cpp  req_sequential.cpp
